Create simple search page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,6 +19,6 @@
     Name: <%= name %>
     <br>
     HP: <%= hp %>
-    
+    <progress id="file" value = "<%= hp %>" max="255"> <%= hp %> </progress>
 </body>
 </html>
