--- a/public/search.css
+++ b/public/search.css
@@ -1,4 +1,3 @@
-/* 用Flex box 或者grid取代padding */
 html, body{
     height: 100%;
 }
@@ -94,43 +93,19 @@ ol, ul{
     padding: 0;
     list-style: none;
 }
-     
+
+#text {
+    text-align: center;
+}
 
 #container {
 	display: flex;
-	flex-direction: column;
-	align-content: space-around;
-	font-family:'Trebuchet MS';
-}
-
-.gallery {
-	display: flex;
-	margin: 0 5%;
+	margin: 0 3%;
 	justify-content: space-between;
 	text-align: center;
 }
 
-.picture {
+.filter {
 	display: flex;
 	flex-basis: 30%;
-}
-
-.picture img {
-	width: 100%;
-}
-
-img {
-	border-radius: 5px;
-}
-
-footer {
-
-    text-align: center;
-    padding: 20px;
-    clear: both;
-}
-
-#logo_container {
-    overflow: hidden;
-
 }
