--- a/public/search.css
+++ b/public/search.css
@@ -98,6 +98,16 @@ ol, ul{
     text-align: center;
 }
 
+#left-col {
+	float: left;
+	width: 60%;
+}
+
+#search-history {
+	float: left;
+	width: 40%;
+}
+
 #container {
 	display: flex;
 	margin: 0 3%;
